UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/New_Product_WAC_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed-Contracts</fullName>
                </value>
                <value>
                    <fullName>Closed-Country Head</fullName>
                </value>
                <value>
                    <fullName>Closed-Customer&apos;s Update</fullName>
                </value>
                <value>
                    <fullName>Closed-Customer Service</fullName>
                </value>
                <value>
                    <fullName>Closed-Draft</fullName>
                </value>
                <value>
                    <fullName>Closed-Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing &amp; Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Lead</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Lead SRx</fullName>
                </value>
                <value>
                    <fullName>Closed-Sales &amp; Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Closed-SCM &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Closed-Sr Director or VP Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-SRx IPA Contracts Approver</fullName>
                </value>
                <value>
                    <fullName>Closed-Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Closed-Vistex Update</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Contracts Rejected</fullName>
                </value>
                <value>
                    <fullName>Country Head</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Update</fullName>
                </value>
                <value>
                    <fullName>Customer Pending</fullName>
                </value>
                <value>
                    <fullName>Customer Rejected</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Customer Service Rejected</fullName>
                </value>
                <value>
                    <fullName>Customner&apos;s Update</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_GM__c</fullName>
        <label>GM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Head_of_Marketing_Approval__c</fullName>
        <label>Head of Marketing Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Head_of_Marketing_Comments__c</fullName>
        <label>Head of Marketing Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Head_of_PM_Grp_Approval__c</fullName>
        <label>Head of PM Grp Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Head_of_PM_Grp_Comments__c</fullName>
        <label>Head of PM Grp Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Clone_New_Product_WAC_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Clone New Product WAC Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head of PM Grp</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Product_WAC_Pricing2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Product_WAC_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_sales_annualized__c</fullName>
        <label>Net sales (annualized) on LE/Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Previous_New_Product_WAC_Pricing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous New Product WAC Pricing</label>
        <referenceTo>New_Product_WAC_Pricing__c</referenceTo>
        <relationshipLabel>New Product WAC Pricing</relationshipLabel>
        <relationshipName>New_Product_WAC_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Product_WAC_Pricing1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_TPT__c</fullName>
        <label>TPT %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_Price_for_New_Launch_Name__c</fullName>
        <label>WAC Price for New Launch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>New Product WAC Pricing</relationshipLabel>
        <relationshipName>New_Product_WAC_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>New Product WAC Pricing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_WAC_Price_for_New_Launch_Name__c</columns>
        <columns>Phoenix_Approval_Status__c</columns>
        <columns>Phoenix_Product_Family__c</columns>
        <columns>Phoenix_Product_Type__c</columns>
        <columns>Phoenix_Net_sales_annualized__c</columns>
        <columns>Phoenix_TPT__c</columns>
        <columns>Phoenix_GM__c</columns>
        <columns>Phoenix_Product_Director__c</columns>
        <columns>Phoenix_Marketing_Lead__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WAC Price - {000000}</displayFormat>
        <label>WAC Price for New Launch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Product WAC Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>